Wed Apr 30 17:47:21 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (rb_reg_search): use local variable.  a patch from wanabe
	  <s.wanabe AT gmail.com> in [ruby-dev:34537].  [ruby-dev:34492]

Sat Apr 26 19:40:34 2008  Guy Decoux  <decoux@moulon.inra.fr>

	* class.c (struct clone_method_data): Add cref.
	  (clone_method): Properly handle NODE_BMETHOD and NODE_DMETHOD.
	  (rb_singleton_class_clone, singleton_class_clone_int): Set a
	  proper value to klass and propagate cref. [ruby-core:16238]

	* eval.c (rb_block_dup, rb_method_dup), intern.h: Add duplicator
	  methods for use from class.c#clone_method().

Sat Apr 26 19:33:56 2008  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c (rb_yield_0, proc_invoke, proc_arity): allow passing a block
	  to a Proc.  [ruby-dev:23533]; by nobu; backported from 1.9.

	* parse.y (block_par, block_var): ditto.

Fri Apr 25 12:37:54 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (flatten): returns an instance of same class.
	  [ruby-core:16554]

Thu Apr 24 23:47:50 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/net/pop.rb: backported from 1.9. bug#19003

	* ext/openssl/lib/openssl/ssl.rb: set_params; backported from 1.9.
	  bug#19552, [ruby-dev:34402]

	* ext/openssl/ossl_ssl.c: ditto.

	* test/openssl/test_ssl.rb: ditto.

Thu Apr 24 17:06:34 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (THREAD_SAVE_CONTEXT): remove unnecessary
	  FLUSH_REGISTER_WINDOWS before calling setjmp().  [ruby-core:16285]

Thu Apr 24 14:15:11 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (dln_find_1): prior files with extensions to files sans
	  extensions.  [ruby-core:16517]

Wed Apr 23 15:39:31 2008  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c (bind_eval): Add Binding#eval, a shorthand method for
	  eval(str, binding, ..); backported from 1.9.

Wed Apr 23 15:28:52 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/gdbm/test_gdbm.rb (TestGDBM#test_s_open_no_create): failed